- Modified  CDC::CreateFont             	now returns void
- Modified  CDC::CreatePen              	now returns void
- Modified  CDC::CreatePenIndirect      	now returns void
- Modified  CDC::LoadBitmap 				now returns BOOL
- Modified  CDC::LoadImage              	now returns BOOL
- Modified  CDC::LoadOEMBitmap          	now returns BOOL
- Modified  CListView::GetEditCtrl      	now returns CEdit*
- Modified  CListView::GetHeader			now returns CHeader*
- Modified  CListView::GetToolTips      	now returns CToolTip*
- Modified  CListView::SetToolTips      	now accepts CToolTip*
- Modified  CListView::EditLabel			now returns CEdit*
- Modified  CRebar::GetToolTips         	now returns CToolTip*
- Modified  CToolBar::GetToolTips			now returns CToolTip*
- Modified  CToolBar::SetToolTips       	now accepts CToolTip*
- Modified  CTreeView::GetEditCtrl      	now returns CEdit*
- Modified  CTreeView::GetToolTips      	now returns CToolTip*
- Modified  CTreeView::SetToolTips      	now accepts CToolTip*
- Modified  CWnd::SetWindowPos				now uses CWnd* for first argument
- Removed 	CString::b_str
- Removed 	CString(LPCTSTR pszText);
- Removed 	CString::operator += (LPCTSTR szText);

Incompatibilities with previous versions
----------------------------------------


Version 7.2
===========

New Features and Enhancements
-----------------------------
* Added CString class
   The CString class is intended to provide much of the same functionality
   as the CString class provided with MFC/ATL.
* Added CMenu
	The CMenu class is intended to provide much of the same functionality
    as the CMenu class provided with MFC. The library now standardises on
    using pointers to CMenu, instead of HMENU.	
* Added CFile
	This class provides a convenient wrapper for functions dealing with files.
* Added Idle processing.
	The Idle processing is used by the Win32++ library for some internal 
	processing. It is also available for use by users, and is used in much the